# Rag_FirePrevention

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  RELEASE_CHECKLIST.md  config.py  main.py  pyproject.toml
data/: qa_processor.py
data/_docs/: docs.json
src/: __init__.py  api.py  cache_manager.py  models.py  qa_service.py  vector_store.py
